# napari-segmentation-human-in-loop

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_segmentation_human_in_loop/: __init__.py  _trainer.py  _widget.py  napari.yaml
src/napari_segmentation_human_in_loop/_tests/: test_sample_data.py  test_widget.py
src/napari_segmentation_human_in_loop/_tests/test_widget/: image0.tiff  image0.tiff.label.npy  image1.tiff  image1.tiff.label.npy
