[metadata]
name = napari-segmentation-human-in-loop

description = Some another napari plugin for human-in-loop training of segmentation models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yfukai/napari-segmentation-human-in-loop
author = Yohsuke T. Fukai
author_email = ysk@yfukai.net
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/yfukai/napari-segmentation-human-in-loop/issues
    Documentation = https://github.com/yfukai/napari-segmentation-human-in-loop#README.md
    Source Code = https://github.com/yfukai/napari-segmentation-human-in-loop
    User Support = https://github.com/yfukai/napari-segmentation-human-in-loop/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    cellpose<3.0.0

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segmentation-human-in-loop = napari_segmentation_human_in_loop:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pytest-datadir
    napari
    pyqt5


[options.package_data]
* = *.yaml
